tp07-namespaces/corrections/namespace-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    env: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    env: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: production
